<resources>
    <string name="app_name">EffectiveMobileApp</string>

    <string name="click_double_for_exit">Нажмите дважды для выхода</string>

    <!-- Errors -->
    <string name="error_server_timeout">Истекло время ожидания от сервера. Пожалуйста, попробуйте позже!</string>
    <string name="error_server_internal">Не удалось установить соединение с сервером. Пожалуйста, попробуйте позже!</string>
    <string name="error_server_network">Нет удалось установить соединение с сервероом. Пожалуйста, проверьте свое интернетподключение!</string>
    <string name="error_server_unknown">Неизвестная ошибка. Пожалуйста, попробуйте позже!</string>

    <!-- Nav bar items -->
    <string name="nav_bar_home">Главная</string>
    <string name="nav_bar_catalog">Каталог</string>
    <string name="nav_bar_basket">Корзина</string>
    <string name="nav_bar_sale">Акции</string>
    <string name="nav_bar_profile">Профиль</string>

    <!-- Auth screen -->
    <string name="auth_screen_toolbar_title">Вход</string>
    <string name="auth_screen_privacy_policy_title">Нажимая кнопку “Войти”, Вы принимаете\n<a href="">условия программы лояльности</a></string>
    <string name="auth_screen_log_in_button_title">Войти</string>

    <!-- Catalog screen -->
    <string name="catalog_screen_rating_and_reviews_count"><font fgcolor='#F9A249'>%s</font> (%s)</string>
    <string name="price">%s ₽</string>
    <string name="discount">-%1$d%%</string>

    <string-array name="sort">
        <item>По популярности</item>
        <item>По уменьшению цены</item>
        <item>По возрастанию цены</item>
    </string-array>

    <!-- KT -->
    <plurals name="kt_screen_available_count">
        <item quantity="one">Доступно для заказа %s штука</item>
        <item quantity="few">Доступно для заказа %s штук</item>
        <item quantity="many">Доступно для заказа %s штук</item>
        <item quantity="other">Доступно для заказа %s штук</item>
    </plurals>

    <plurals name="kt_screen_reviews_count">
        <item quantity="one">%s отзыв</item>
        <item quantity="few">%s отзыва</item>
        <item quantity="many">%s отзывов</item>
        <item quantity="other">%s отзывов</item>
    </plurals>

    <string name="kt_screen_rating_count">%s</string>
    <string name="kt_screen_hide_title">Скрыть</string>
    <string name="kt_screen_show_more_title">Подробнее</string>

    <!-- Profile screen -->
    <plurals name="profile_screen_favorites_count">
        <item quantity="one">%s товар</item>
        <item quantity="few">%s товара</item>
        <item quantity="many">%s товаров</item>
        <item quantity="other">%s товаров</item>
    </plurals>

</resources>