<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionTabMain"
        android:icon="@drawable/bottom_nav_bar_tab_main"
        android:title="@string/nav_bar_home" />

    <item
        android:id="@+id/actionTabCatalog"
        android:icon="@drawable/bottom_nav_bar_tab_catalog"
        android:title="@string/nav_bar_catalog" />

    <item
        android:id="@+id/actionTabBasket"
        android:icon="@drawable/bottom_nav_bar_tab_basket"
        android:title="@string/nav_bar_basket" />

    <item
        android:id="@+id/actionTabSale"
        android:icon="@drawable/bottom_nav_bar_tab_sale"
        android:title="@string/nav_bar_sale" />

    <item
        android:id="@+id/actionTabProfile"
        android:icon="@drawable/bottom_nav_bar_tab_profile"
        android:title="@string/nav_bar_profile" />
</menu>